формирование стилистики выпадающих списков

--- a/product.html
+++ b/product.html
@@ -417,8 +417,52 @@
     <section class="category-product center">
         <div class="category">
             <details class="category__list">
-                <summary class="category__summary">Category</summary>
-                Lorem ipsum dolor sit amet.
+                <summary class="">CATEGORY <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+                <div class="">
+                    <div class="">
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                </div>
+            </details>
+            <details class="category__list">
+                <summary class="">BRAND <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+                <div class="">
+                    <div class="">
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                </div>
+            </details>
+            <details class="category__list">
+                <summary class="">DESIGNER <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+                <div class="">
+                    <div class="">
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                </div>
             </details>
         </div>
         <!-- блок с фильтрами и карточками -->
@@ -459,11 +503,13 @@
             <div class="product__sort">
                 <div class="product__block">
                     <div class="product__name">Sort By</div>
-                    <div class="product__name product__name_border">Name <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></div>
+                    <div class="product__name product__name_border">Name <i class="fa fa-caret-down fa-left-padding"
+                            aria-hidden="true"></i></div>
                 </div>
                 <div class="product__block">
                     <div class="product__name">Show</div>
-                    <div class="product__name product__name_border">09 <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></div>
+                    <div class="product__name product__name_border">09 <i class="fa fa-caret-down fa-left-padding"
+                            aria-hidden="true"></i></div>
                 </div>
             </div>
             <!-- блок карточек товаров -->
@@ -663,26 +709,35 @@
                 <div class="product__numbers">
                     <nav class="product__nav">
                         <ul class="product__pagination">
-                          <li class="product__pagination-item">
-                            <a class="menu__link product__pagination_link" href="#" aria-label="Previous">
-                              <span aria-hidden="true">&laquo;</span>
-                            </a>
-                          </li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link product__pagination_link-active" href="#">1</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">2</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">3</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">4</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">5</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">6</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">7</a></li>
-                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">8</a></li>
-                          <li class="product__pagination-item">
-                            <a class="menu__link product__pagination_link" href="#" aria-label="Next">
-                              <span aria-hidden="true">&raquo;</span>
-                            </a>
-                          </li>
+                            <li class="product__pagination-item">
+                                <a class="menu__link product__pagination_link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="product__pagination-item"><a
+                                    class="menu__link product__pagination_link product__pagination_link-active"
+                                    href="#">1</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">2</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">3</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">4</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">5</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">6</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">7</a></li>
+                            <li class="product__pagination-item"><a class="menu__link product__pagination_link"
+                                    href="#">8</a></li>
+                            <li class="product__pagination-item">
+                                <a class="menu__link product__pagination_link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
                         </ul>
-                      </nav>
+                    </nav>
                 </div>
                 <div class="product__button_all">
                     <a class="menu__link product__link_button-all" href="#">View all</a>
