заметка для работы

--- a/product.html
+++ b/product.html
@@ -414,6 +414,7 @@
     <!-- // Блок хлебные крошки -->
 
     <!-- Блок продукты и фильтры -->
+    <!-- стилизация блока полностью -->
     <section class="category-product center">
         <div class="category">
             <details class="category__list">
