добавление страницы корзина, изменение ссылок на страницах

--- a/product.html
+++ b/product.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="drop__button-account">
                         <a class="drop__button-account_link drop__button-account_hover" href="#">Checkout</a>
-                        <a class="menu__link drop__button-account_link drop__button-account_gray" href="#">Go to
+                        <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go to
                             cart</a>
                     </div>
                 </div>
