формирование структуры блока управлением покупкой

--- a/cart.html
+++ b/cart.html
@@ -414,7 +414,14 @@
     <!-- // Блок хлебные крошки -->
 
     <!-- блок состава корзины -->
-    
+    <div class="cart center">
+        <div class="shopping-list"></div>
+        <div class="cart-manage">
+            <a class="menu__link" href="#">clear shopping cart</a>
+            <a class="menu__link" href="#">continue shopping</a>
+        </div>
+        <div class="shiping-info"></div>
+    </div>
     <!-- // блок состава корзины -->
 
     <!-- блок Подписок -->
