кнопки управления покупкой готовы

--- a/cart.html
+++ b/cart.html
@@ -416,9 +416,9 @@
     <!-- блок состава корзины -->
     <div class="cart center">
         <div class="shopping-list"></div>
-        <div class="cart-manage">
-            <a class="menu__link" href="#">clear shopping cart</a>
-            <a class="menu__link" href="#">continue shopping</a>
+        <div class="cart__menage">
+            <a class="menu__link cart__link" href="#">clear shopping cart</a>
+            <a class="menu__link cart__link" href="#">continue shopping</a>
         </div>
         <div class="shiping-info"></div>
     </div>
