--- a/cart.html
+++ b/cart.html
@@ -420,7 +420,17 @@
             <a class="menu__link cart__link" href="#">clear shopping cart</a>
             <a class="menu__link cart__link" href="#">continue shopping</a>
         </div>
-        <div class="shiping-info"></div>
+        <form class="shiping-info">
+            <div class="shiping-info__adress">
+                <h3 class="shiping-info__title">Shipping Adress</h3>
+                <input class="shiping-info__input" type="text" placeholder="City">
+                <input class="shiping-info__input" type="text" placeholder="State">
+                <input class="shiping-info__input" type="text" placeholder="Postal \ Zip code">
+                <button class="shiping-info__button" type="submit">get a quote</button>
+            </div>
+            <div class="shiping-info__discount"></div>
+            <div class="shiping-info__total"></div>
+        </form>
     </div>
     <!-- // блок состава корзины -->
 
