блок купон готов

--- a/cart.html
+++ b/cart.html
@@ -428,7 +428,12 @@
                 <input class="shiping-info__input" type="text" placeholder="Postal \ Zip code">
                 <button class="shiping-info__button" type="submit">get a quote</button>
             </div>
-            <div class="shiping-info__discount"></div>
+            <div class="shiping-info__discount">
+                <h3 class="shiping-info__title">coupon  discount</h3>
+                <label for="">Enter your coupon code if you have one</label>
+                <input class="shiping-info__input" type="text" placeholder="City">
+                <button class="shiping-info__button" type="submit">Apply coupon</button>
+            </div>
             <div class="shiping-info__total"></div>
         </form>
     </div>
