--- a/cart.html
+++ b/cart.html
@@ -434,7 +434,18 @@
                 <input class="shiping-info__input" type="text" placeholder="City">
                 <button class="shiping-info__button" type="submit">Apply coupon</button>
             </div>
-            <div class="shiping-info__total"></div>
+            <div class="shiping-info__total">
+                <div class="shiping-info__sub">
+                    <p class="shiping-info__sub-total">Sub total</p> 
+                    <p class="shiping-info__sub-total">$900</p> 
+                </div>
+                <div class="shiping-info__sub shiping-info_grand">
+                    <p class="shiping-info__grand-total">GRAND TOTAL</p>
+                    <p class="shiping-info__grand-total">$900</p>
+                </div>
+                <hr>
+                <a class="menu__link shiping-info__button shiping-info__button_total" href="#">proceed to checkout</a>
+            </div>
         </form>
     </div>
     <!-- // блок состава корзины -->
