Блок кнопок и input на странице cart готов

--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,8 @@
                     </div>
                     <div class="drop__button-account">
                         <a class="drop__button-account_link drop__button-account_hover" href="#">Checkout</a>
-                        <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go to
+                        <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go
+                            to
                             cart</a>
                     </div>
                 </div>
@@ -429,22 +430,23 @@
                 <button class="shiping-info__button" type="submit">get a quote</button>
             </div>
             <div class="shiping-info__discount">
-                <h3 class="shiping-info__title">coupon  discount</h3>
+                <h3 class="shiping-info__title">coupon discount</h3>
                 <label for="">Enter your coupon code if you have one</label>
-                <input class="shiping-info__input" type="text" placeholder="City">
+                <input class="shiping-info__input" type="text" placeholder="Tape coupon">
                 <button class="shiping-info__button" type="submit">Apply coupon</button>
             </div>
             <div class="shiping-info__total">
                 <div class="shiping-info__sub">
-                    <p class="shiping-info__sub-total">Sub total</p> 
-                    <p class="shiping-info__sub-total">$900</p> 
+                    <p class="shiping-info__sub-total">Sub total</p>
+                    <p class="shiping-info__sub-total">$900</p>
                 </div>
                 <div class="shiping-info__sub shiping-info_grand">
                     <p class="shiping-info__grand-total">GRAND TOTAL</p>
-                    <p class="shiping-info__grand-total">$900</p>
+                    <p class="shiping-info__grand-total shiping-info__grand-total_pink">$900</p>
                 </div>
-                <hr>
+                <hr class="shiping-info__line">
                 <a class="menu__link shiping-info__button shiping-info__button_total" href="#">proceed to checkout</a>
+
             </div>
         </form>
     </div>
