создание шаблона шапки корзины. название столбцов

--- a/cart.html
+++ b/cart.html
@@ -416,7 +416,14 @@
 
     <!-- блок состава корзины -->
     <div class="cart center">
-        <div class="shopping-list"></div>
+        <div class="shopping-list">
+            <p class="shopping-list__title">Product Details</p>
+            <p class="shopping-list__title">unite Price</p>
+            <p class="shopping-list__title">Quantity</p>
+            <p class="shopping-list__title">shipping</p>
+            <p class="shopping-list__title">Subtotal</p>
+            <p class="shopping-list__title">ACTION</p>
+        </div>
         <div class="cart__menage">
             <a class="menu__link cart__link" href="#">clear shopping cart</a>
             <a class="menu__link cart__link" href="#">continue shopping</a>
@@ -445,7 +452,7 @@
                     <p class="shiping-info__grand-total shiping-info__grand-total_pink">$900</p>
                 </div>
                 <hr class="shiping-info__line">
-                <a class="menu__link shiping-info__button shiping-info__button_total" href="#">proceed to checkout</a>
+                <a class="menu__link shiping-info__button_total" href="#">proceed to checkout</a>
 
             </div>
         </form>
