создание шаблона карточки товара выбранного в корзине

--- a/cart.html
+++ b/cart.html
@@ -424,6 +424,9 @@
             <p class="shopping-list__title">Subtotal</p>
             <p class="shopping-list__title">ACTION</p>
         </div>
+        <div class="shopping-list">
+            
+        </div>
         <div class="cart__menage">
             <a class="menu__link cart__link" href="#">clear shopping cart</a>
             <a class="menu__link cart__link" href="#">continue shopping</a>
