--- a/cart.html
+++ b/cart.html
@@ -424,8 +424,15 @@
             <p class="shopping-list__title">Subtotal</p>
             <p class="shopping-list__title">ACTION</p>
         </div>
-        <div class="shopping-list">
-            
+        <div class="cart__unit shopping-list">
+            <div class="cart__unit-about">
+                <img src="./img/products/catalog8.png" alt="фото товара" height="115">
+                <div class="cart__unit-title">
+                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
+                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
+                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
+                </div>
+            </div>
         </div>
         <div class="cart__menage">
             <a class="menu__link cart__link" href="#">clear shopping cart</a>
