шаблон карточки товара закончен

--- a/cart.html
+++ b/cart.html
@@ -418,11 +418,11 @@
     <div class="cart center">
         <div class="shopping-list">
             <p class="shopping-list__title">Product Details</p>
-            <p class="shopping-list__title">unite Price</p>
-            <p class="shopping-list__title">Quantity</p>
-            <p class="shopping-list__title">shipping</p>
-            <p class="shopping-list__title">Subtotal</p>
-            <p class="shopping-list__title">ACTION</p>
+            <p class="shopping-list__title cart__unit-title_center">unite Price</p>
+            <p class="shopping-list__title cart__unit-title_center">Quantity</p>
+            <p class="shopping-list__title cart__unit-title_center">shipping</p>
+            <p class="shopping-list__title cart__unit-title_center">Subtotal</p>
+            <p class="shopping-list__title cart__unit-title_center">ACTION</p>
         </div>
         <div class="cart__unit shopping-list">
             <div class="cart__unit-about">
@@ -433,6 +433,11 @@
                     <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
                 </div>
             </div>
+            <p class="cart__unit-title cart__unit-title_center">$150</p>
+            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
+            <p class="cart__unit-title cart__unit-title_center">FREE</p>
+            <p class="cart__unit-title cart__unit-title_center">$300</p>
+            <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
         </div>
         <div class="cart__menage">
             <a class="menu__link cart__link" href="#">clear shopping cart</a>
