добавление новой страницы checkout, изменение параметров страниц, корректирвка кода

--- a/checkout.html
+++ b/checkout.html
@@ -117,7 +117,7 @@
                         <p class="drop__total_price">$500.00</p>
                     </div>
                     <div class="drop__button-account">
-                        <a class="drop__button-account_link drop__button-account_hover" href="./checkout.html">Checkout</a>
+                        <a class="drop__button-account_link drop__button-account_hover" href="#">Checkout</a>
                         <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go
                             to
                             cart</a>
@@ -413,108 +413,6 @@
         </nav>
     </div>
     <!-- // Блок хлебные крошки -->
-
-    <!-- блок состава корзины -->
-    <div class="cart center">
-        <!-- шапка таблицы товаров-->
-        <div class="shopping-list">
-            <p class="shopping-list__title">Product Details</p>
-            <p class="shopping-list__title cart__unit-title_center">unite Price</p>
-            <p class="shopping-list__title cart__unit-title_center">Quantity</p>
-            <p class="shopping-list__title cart__unit-title_center">shipping</p>
-            <p class="shopping-list__title cart__unit-title_center">Subtotal</p>
-            <p class="shopping-list__title cart__unit-title_center">ACTION</p>
-        </div>
-        <!-- карточка товара 1 -->
-        <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog8.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
-                </div>
-            </div>
-            <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
-            <p class="cart__unit-title cart__unit-title_center">FREE</p>
-            <p class="cart__unit-title cart__unit-title_center">$300</p>
-            <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
-        </div>
-        <!-- карточка товара 2 -->
-        <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog9.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
-                </div>
-            </div>
-            <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
-            <p class="cart__unit-title cart__unit-title_center">FREE</p>
-            <p class="cart__unit-title cart__unit-title_center">$300</p>
-            <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
-        </div>
-        <!-- карточка товара 3 -->
-        <div class="cart__unit shopping-list">
-            <div class="cart__unit-about">
-                <a href="#">
-                    <img src="./img/products/catalog12.png" alt="фото товара" height="115">
-                </a>
-                <div class="cart__unit-title">
-                    <h3 class="cart__unit-head">Mango  People  T-shirt</h3>
-                    <p class="cart__unit-text">Color:<span class="cart__unit-span">Red</span> </p>
-                    <p class="cart__unit-text">Size:<span class="cart__unit-span">Xll</span> </p>
-                </div>
-            </div>
-            <p class="cart__unit-title cart__unit-title_center">$150</p>
-            <p class="cart__unit-title cart__unit-title_center cart__quantity">2</p>
-            <p class="cart__unit-title cart__unit-title_center">FREE</p>
-            <p class="cart__unit-title cart__unit-title_center">$300</p>
-            <i class="fa fa-times-circle drop__item_close cart__unit-title_center" aria-hidden="true"></i>
-        </div>
-        <!-- кнопки управления заказом -->
-        <div class="cart__manage">
-            <a class="menu__link cart__link" href="#">clear shopping cart</a>
-            <a class="menu__link cart__link" href="#">continue shopping</a>
-        </div>
-        <!-- форма заполнения для заказа -->
-        <form class="shiping-info">
-            <div class="shiping-info__adress">
-                <h3 class="shiping-info__title">Shipping Adress</h3>
-                <input class="shiping-info__input" type="text" placeholder="City">
-                <input class="shiping-info__input" type="text" placeholder="State">
-                <input class="shiping-info__input" type="text" placeholder="Postal \ Zip code">
-                <button class="shiping-info__button" type="submit">get a quote</button>
-            </div>
-            <div class="shiping-info__discount">
-                <h3 class="shiping-info__title">coupon discount</h3>
-                <label for="">Enter your coupon code if you have one</label>
-                <input class="shiping-info__input" type="text" placeholder="Tape coupon">
-                <button class="shiping-info__button" type="submit">Apply coupon</button>
-            </div>
-            <div class="shiping-info__total">
-                <div class="shiping-info__sub">
-                    <p class="shiping-info__sub-total">Sub total</p>
-                    <p class="shiping-info__sub-total">$900</p>
-                </div>
-                <div class="shiping-info__sub shiping-info_grand">
-                    <p class="shiping-info__grand-total">GRAND TOTAL</p>
-                    <p class="shiping-info__grand-total shiping-info__grand-total_pink">$900</p>
-                </div>
-                <hr class="shiping-info__line">
-                <a class="menu__link shiping-info__button_total" href="#">proceed to checkout</a>
-
-            </div>
-        </form>
-    </div>
-    <!-- // блок состава корзины -->
 
     <!-- блок Подписок -->
     <section class="subscrybe center">
