--- a/checkout.html
+++ b/checkout.html
@@ -414,6 +414,64 @@
     </acide>
     <!-- // Блок хлебные крошки -->
 
+    <!-- блок параметров и аккаунта -->
+    <section class="checkout center">
+        <details class="checkout__list">
+            <summary class="">01. Shipping Adress<i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+            <div class="checkout__conteiner">
+                <!-- блок информации -->
+                <div class="checkout__left">
+                    <div class="chekout__block">
+                        <p class="checkout__block-head">Check as a guest or register</p>
+                        <p class="checkout__block-text">Register with us for future convenience</p>
+                    </div>
+                    <div class="chekout__block">
+                        <input type="radio" name="checkout" id="checkout-radio">
+                        <label for="checkout-radio">checkout as guest</label>
+                        <input type="radio" name="checkout" id="checkout-radio">
+                        <label for="checkout-radio">register</label>
+                    </div>
+                    <div class="chekout__block">
+                        <p class="checkout__block-head">register and save time!</p>
+                        <p class="checkout__block-text">Register with us for future convenience</p>
+                    </div>
+                    <div class="chekout__block">
+                        <p class="checkout__block-text"><i class="fa fa-angle-double-right" aria-hidden="true"></i>Fast
+                            and easy checkout</p>
+                        <p class="checkout__block-text"><i class="fa fa-angle-double-right" aria-hidden="true"></i>Easy
+                            access to your order history and status</p>
+                    </div>
+                    <div class="cart__manage">
+                        <a class="menu__link cart__link" href="#">Continue</a>
+                    </div>
+                </div>
+                <!-- блок Логин -->
+                <div class="checkout__right">
+                    <div class="chekout__block">
+                        <p class="checkout__block-head">Already registed?</p>
+                        <p class="checkout__block-text">Please log in below</p>
+                    </div>
+                    <div class="chekout__block">
+                        <label for="checkout-email">EMAIL ADDRESS <span class="global_pink">*</span></label>
+                        <input type="text" id="checkout-email">
+                    </div>
+                    <div class="chekout__block">
+                        <label for="checkout-email">PASSWORD <span class="global_pink">*</span></label>
+                        <input type="text" id="checkout-email">
+                    </div>
+                    <div class="chekout__block">
+                        <p class="checkout__block-head global_pink">* Required Fileds</p>
+                    </div>
+                    <div class="cart__manage">
+                        <a class="menu__link cart__link" href="#">Continue</a>
+                        <p class="checkout__fogot">Forgot Password ?</p>
+                    </div>
+                </div>
+            </div>
+        </details>
+    </section>
+    <!-- // блок параметров и аккаунта -->
+
     <!-- блок Подписок -->
     <section class="subscrybe center">
         <div class="subscrybe-comment">
