стилизация выпадающего списка, пункта логина и авторизации

--- a/checkout.html
+++ b/checkout.html
@@ -416,7 +416,7 @@
 
     <!-- блок параметров и аккаунта -->
     <section class="checkout center">
-        <details class="checkout__list">
+        <details class="checkout__list" open>
             <summary class="">01. Shipping Adress<i class="fa fa-caret-down" aria-hidden="true"></i></summary>
             <div class="checkout__conteiner">
                 <!-- блок информации -->
