--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
     <!-- заголовок сайта -->
     <header class="main-header center">
         <div class="main-header__left">
-            <a class="main-header__left main-header__link" href="#">
+            <a class="main-header__left main-header__link" href="./index.html">
                 <img src="./img/logo.png" width="44" height="38" alt="Логотип">
                 <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
             </a>
