--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                             <p class="drop__total_price">$500.00</p>
                         </div>
                         <div class="drop__button-account">
-                            <a class="drop__button-account_link drop__button-account_hover" href="#">Checkout</a>
-                            <a class="menu__link drop__button-account_link drop__button-account_gray" href="#">Go to
+                            <a class="drop__button-account_link drop__button-account_hover" href="./checkout.html">Checkout</a>
+                            <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go to
                                 cart</a>
                         </div>
                     </div>
