исправление хлебных крошек

--- a/product.html
+++ b/product.html
@@ -406,9 +406,17 @@
     <acide class="breadcrumbs center">
         <h2 class="breadcrumbs__title">New Arrivals</h2>
         <nav class="breadcrumbs__nav">
-            <a href="#bread" class="menu__link breadcrumbs__link">Home /</a>
-            <a href="#bread" class="menu__link breadcrumbs__link">Men /</a>
-            <a href="#bread" class="menu__link breadcrumbs__link"><span class="global_pink">New Arrivals</span></a>
+            <ul class="breadcrumbs__list">
+                <li class="breadcrumbs__item">
+                    <a href="#bread" class="menu__link breadcrumbs__link">Home</a>
+                </li>
+                <li class="breadcrumbs__item">
+                    <a href="#bread" class="menu__link breadcrumbs__link">Men</a> 
+                </li>
+                <li class="breadcrumbs__item">
+                    <a href="#bread" class="menu__link breadcrumbs__link"><span class="global_pink">New Arrivals</span></a>
+                </li>
+            </ul>           
         </nav>
     </acide>
     <!-- // Блок хлебные крошки -->
